5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1668_2966.log
== TEST (2019-04-15 19:08:03) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher= S
valor_final=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(valor_mulher)
else:
	print(valor_final)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:08:19) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))

valor_final=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(valor_mulher)
else:
	print(valor_final)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:08:24) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))

valor_final=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(valor_mulher)
else:
	print(valor_final)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:10:13) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher(input("S ou N ?"))
valor_final=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(valor_mulher, 2)
else:
	print(valor_final, 2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:10:24) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher(input("S ou N ?"))
valor_final=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(valor_mulher, 2)
else:
	print(valor_final, 2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:11:47) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher(input("S ou N ?"))
desconto= ingresso +
valor_total=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2)
else:
	print(round(valor_total, 2)
	

-- ERROR:
File "XXXX", line 4
    desconto= ingresso +
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:05) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher(input("S ou N ?"))
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2)
else:
	print(round(valor_total, 2)
	

-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:33) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher(input("S ou N ?"))
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2)
else:
	print(round(valor_total, 2)
	

-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:40) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher(input("S ou N ?"))
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2)
else:
	print(round(valor_total, 2)

-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:51) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher(input("S ou N ?"))
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:13:29) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?"))
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
File "XXXX", line 3
    mulher=input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:13:34) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:15:14) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:16:25) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:17:34) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso*20/100)+quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:18:19) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso- desconto*quantidade)
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:19:01) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?").lower()
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto*quantidade)
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:19:11) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?").lower()
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto*quantidade)
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- EXECUTION TIME:
0.158976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:20:12) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:20:19) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- EXECUTION TIME:
0.225144
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:20:25) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:00) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?".lower())
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:43) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?".upper())
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:53) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?".upper())
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:21:54) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?".upper())
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- EXECUTION TIME:
0.193646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:58) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?".upper())
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:22:30) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?".upper())
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:22:46) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?").upper()
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:22:56) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?").upper()
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- EXECUTION TIME:
0.209536
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:41) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:23:49) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- EXECUTION TIME:
0.171842
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:53) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:24:01) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- EXECUTION TIME:
0.149248
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:24:25) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N")
desconto= ingresso * 20/100
valor_total=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:24:42) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N")
desconto= ingresso * 20/100
valor=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:24:51) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N")
desconto= ingresso * 20/100
valor=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor, 2))

-- EXECUTION TIME:
0.242299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:26:17) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?").upper()
desconto= ingresso * 20/100
valor=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:26:32) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?").upper()
desconto= ingresso * 20/100
valor=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor, 2))

-- EXECUTION TIME:
0.137165
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:26:47) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher==S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:26:54) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher==S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor, 2))

-- EXECUTION TIME:
0.226437
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:27:09) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:27:23) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:05) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:29:18) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor=ingresso*quantidade
valor_mulher=(ingresso-desconto)*quantidade
if ("mulher=S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:45) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor=ingresso*quantidade
if ("mulher=S"):
	print(round(valor*0,8, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:00) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor=ingresso*quantidade
if ("mulher=S"):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:31:06) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor=ingresso*quantidade
if ("mulher=S"):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- EXECUTION TIME:
0.160987
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:16) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor=ingresso*quantidade
if ("mulher==S"):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:31:22) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor=ingresso*quantidade
if ("mulher==S"):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- EXECUTION TIME:
0.144343
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:55) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
desconto= ingresso * 20/100
valor=ingresso*quantidade
if (mulher==S):
	print(round(valor*0.8, 2))
else:
	print(round(valor*0.8, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:58) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
valor=ingresso*quantidade
if (mulher==S):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:17) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
valor=ingresso*quantidade
if (mulher=S):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- ERROR:
File "XXXX", line 5
    if (mulher=S):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:20) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
valor=ingresso*quantidade
if (mulher="S"):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- ERROR:
File "XXXX", line 5
    if (mulher="S"):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:35) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
valor=ingresso*quantidade
if (mulher=="S"):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:36:26) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
valor=ingresso*quantidade
if (mulher=="S"):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:37:39) 
-- CODE:
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
valor=ingresso*quantidade
if (mulher=="S"):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:39:18) 
-- CODE:

mulher=input("S ou N?")
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
mulher=input("S ou N ?")
valor=ingresso*quantidade
if (mulher=="S"):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mulher=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:39:30) 
-- CODE:

mulher=input("S ou N?")
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
valor=ingresso*quantidade
if (mulher=="S"):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:39:40) 
-- CODE:

mulher=input("S ou N?")
ingresso=float(input("valoringresso:"))
quantidade=int(input("quantos deseja:"))
valor=ingresso*quantidade
if (mulher=="S"):
	print(round(valor*0.8, 2))
else:
	print(round(valor, 2))

-- EXECUTION TIME:
0.133361
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
